--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "emoji-picker-react": "^3.4.8",
     "faker": "^5.5.3",
-    "firebase": "^9.1.3",
+    "firebase": "^9.4.1",
     "firebase-tools": "^9.20.0",
     "material-ui-popup-state": "^1.9.3",
     "moment": "^2.29.1",
